--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
                 </span>
             </div>
         </div>
-        <div class="totalContainer">
+    </div>
+    <div class="container" id="bottom">
+        <div>
+            <div class="title">Tip Amount</div>
+            <div class="total" id="tipAmount">₹0.0</div>
+        </div>
+        <div>
             <div class="title">Total Per Person</div>
             <div class="total" id="perPerson">₹0.0</div>
         </div>
